test/corpus/regression/enum
==================
namespace
==================

// ieee802.1AS-2020 10.6.2.2.8: flags (Octet2)
// Table 10-9—Values of flag bits
enum GptpFlags {
    alternateMasterFlag = 1; // Not used in this standard; transmitted as FALSE and ignored on reception
    twoStepFlag = 2; // For Sync messages:
                     //   a) For a one-step transmitting PTP Port (see 11.1.3 and 11.2.13.9), the value is FALSE.
                     //   b) For a two-step transmitting PTP Port, the value is TRUE.
                     // For Pdelay_Resp messages: The value is transmitted as TRUE and ignored on reception

    // TODO add more flags
}

enum GptpNodeType
{
    MASTER_NODE = 11;
    BRIDGE_NODE = 12;
    SLAVE_NODE  = 13;
}

---

(msg_file
  (enum
    (comment)
    (name)
    (body
      (field
        (name)
        (value
          (number)))
      (comment)
      (field
        (name)
        (value
          (number)))
      (comment)
      (comment)))
  (enum
    (name)
    (body
      (field
        (name)
        (value
          (number)))
      (field
        (name)
        (value
          (number)))
      (field
        (name)
        (value
          (number))))))
